--- a/lectures/lecture07.lyx
+++ b/lectures/lecture07.lyx
@@ -15,7 +15,7 @@
 \insertshortauthor
 \end{beamercolorbox}\begin{beamercolorbox}[wd=.333333333\paperwidth,ht=2.25ex,dp=1ex,center]{title  in head/foot}
 \usebeamerfont{title in head/foot}
-Fundamental of Computing \end{beamercolorbox}\begin{beamercolorbox}[wd=.333333333\paperwidth,ht=2.25ex,dp=1ex,right]{date in head/foot}
+Fundamentals of Computing \end{beamercolorbox}\begin{beamercolorbox}[wd=.333333333\paperwidth,ht=2.25ex,dp=1ex,right]{date in head/foot}
 \usebeamerfont{date in head/foot}
 \hspace*{2em} 
 \insertframenumber{} / \inserttotalframenumber\hspace*{2em}
@@ -95,7 +95,7 @@ Fundamental of Computing \end{beamercolorbox}\begin{beamercolorbox}[wd=.33333333
 \begin_body
 
 \begin_layout Title
-AMS 595/691: Fundamentals of Computing: Part II
+AMS 595: Fundamentals of Computing: Part II
 \end_layout
 
 \begin_layout Subtitle
