--- a/lectures/lecture01.lyx
+++ b/lectures/lecture01.lyx
@@ -1,5 +1,5 @@
-#LyX 2.2 created this file. For more info see http://www.lyx.org/
-\lyxformat 508
+#LyX 2.3 created this file. For more info see http://www.lyx.org/
+\lyxformat 544
 \begin_document
 \begin_header
 \save_transient_properties true
@@ -44,6 +44,8 @@ Fundamentals of Computing \end{beamercolorbox}\begin{beamercolorbox}[wd=.3333333
 \font_osf false
 \font_sf_scale 100 100
 \font_tt_scale 100 100
+\use_microtype false
+\use_dash_ligatures true
 \graphics default
 \default_output_format default
 \output_sync 0
@@ -73,6 +75,7 @@ Fundamentals of Computing \end{beamercolorbox}\begin{beamercolorbox}[wd=.3333333
 \suppress_date false
 \justification true
 \use_refstyle 0
+\use_minted 0
 \index Index
 \shortcut idx
 \color #008000
@@ -81,7 +84,10 @@ Fundamentals of Computing \end{beamercolorbox}\begin{beamercolorbox}[wd=.3333333
 \tocdepth 2
 \paragraph_separation indent
 \paragraph_indentation default
-\quotes_language english
+\is_math_indent 0
+\math_numbering_side default
+\quotes_style english
+\dynamic_quotes 0
 \papercolumns 1
 \papersides 1
 \paperpagestyle default
@@ -355,6 +361,7 @@ python: basic python shell (preinstalled in Linux/Mac)
 LatexCommand href
 name "ipython"
 target "http://ipython.org"
+literal "false"
 
 \end_inset
 
@@ -373,7 +380,7 @@ status open
 
 \begin_layout Plain Layout
 
-https://tmpnb.org
+https://mybinder.org/
 \end_layout
 
 \end_inset
@@ -400,6 +407,7 @@ External GUI environments are available for Python, such as
 LatexCommand href
 name "Jupyter Notebook"
 target "http://www.jupyter.org"
+literal "false"
 
 \end_inset
 
@@ -416,6 +424,7 @@ target "http://www.jupyter.org"
 LatexCommand href
 name "Spyder"
 target "https://pythonhosted.org/spyder/"
+literal "false"
 
 \end_inset
 
@@ -430,6 +439,7 @@ target "https://pythonhosted.org/spyder/"
 LatexCommand href
 name "SciPy"
 target "http://scipy.org"
+literal "false"
 
 \end_inset
 
@@ -445,6 +455,7 @@ target "http://scipy.org"
 LatexCommand href
 name "PyCharm"
 target "https://www.jetbrains.com/pycharm/"
+literal "false"
 
 \end_inset
 
@@ -533,7 +544,7 @@ status open
 
 \begin_layout Plain Layout
 
-https://tmpnb.org/
+https://mybinder.org/
 \end_layout
 
 \end_inset
@@ -1250,6 +1261,7 @@ Install
 LatexCommand href
 name "IPython"
 target "https://ipython.org/"
+literal "false"
 
 \end_inset
 
@@ -1262,6 +1274,7 @@ target "https://ipython.org/"
 LatexCommand href
 name "Jupyter Notebook"
 target "http://www.jupyter.org"
+literal "false"
 
 \end_inset
 
@@ -1274,6 +1287,7 @@ target "http://www.jupyter.org"
 LatexCommand href
 name "Spyder"
 target "https://pythonhosted.org/spyder/"
+literal "false"
 
 \end_inset
 
@@ -1286,6 +1300,7 @@ target "https://pythonhosted.org/spyder/"
 LatexCommand href
 name "Anaconda3"
 target "https://www.continuum.io/downloads"
+literal "false"
 
 \end_inset
 
@@ -1462,6 +1477,7 @@ Provides a complete view of your entire workflow
 LatexCommand href
 name "Jupyter Notebook"
 target "http://www.jupyter.org"
+literal "false"
 
 \end_inset
 
@@ -1662,6 +1678,7 @@ Demo:
 LatexCommand href
 name "Jupyter notebook on data types"
 target "http://nbviewer.jupyter.org/url/www.ams.sunysb.edu/%7Ejiao/teaching/ams595/Notebooks/python-datatypes.ipynb"
+literal "false"
 
 \end_inset
 
