fixed link of Numpy for MATLAB Users

--- a/lectures/lecture06.lyx
+++ b/lectures/lecture06.lyx
@@ -1,5 +1,5 @@
-#LyX 2.2 created this file. For more info see http://www.lyx.org/
-\lyxformat 508
+#LyX 2.3 created this file. For more info see http://www.lyx.org/
+\lyxformat 544
 \begin_document
 \begin_header
 \save_transient_properties true
@@ -44,6 +44,8 @@ Fundamentals of Computing \end{beamercolorbox}\begin{beamercolorbox}[wd=.3333333
 \font_osf false
 \font_sf_scale 100 100
 \font_tt_scale 100 100
+\use_microtype false
+\use_dash_ligatures true
 \graphics default
 \default_output_format default
 \output_sync 0
@@ -73,6 +75,7 @@ Fundamentals of Computing \end{beamercolorbox}\begin{beamercolorbox}[wd=.3333333
 \suppress_date false
 \justification true
 \use_refstyle 0
+\use_minted 0
 \index Index
 \shortcut idx
 \color #008000
@@ -81,7 +84,10 @@ Fundamentals of Computing \end{beamercolorbox}\begin{beamercolorbox}[wd=.3333333
 \tocdepth 2
 \paragraph_separation indent
 \paragraph_indentation default
-\quotes_language english
+\is_math_indent 0
+\math_numbering_side default
+\quotes_style english
+\dynamic_quotes 0
 \papercolumns 1
 \papersides 1
 \paperpagestyle default
@@ -305,7 +311,8 @@ See
 \begin_inset CommandInset href
 LatexCommand href
 name "NumPy for MATLAB users"
-target "https://docs.scipy.org/doc/numpy-1.15.0/user/numpy-for-matlab-users.htm"
+target "https://docs.scipy.org/doc/numpy/user/numpy-for-matlab-users.html"
+literal "false"
 
 \end_inset
 
@@ -326,6 +333,7 @@ See
 LatexCommand href
 name "Jupyter notebook on NumPy"
 target "http://nbviewer.jupyter.org/url/www.ams.sunysb.edu/%7Ejiao/teaching/ams595/Notebooks/numpy-basics.ipynb"
+literal "false"
 
 \end_inset
 
@@ -439,6 +447,7 @@ Plotting using Matplotlib
 LatexCommand href
 name "Matplotlib"
 target "http://matplotlib.org/"
+literal "false"
 
 \end_inset
 
@@ -472,6 +481,7 @@ publication-quality
 LatexCommand href
 name "gallery"
 target "http://matplotlib.org/gallery.html"
+literal "false"
 
 \end_inset
 
@@ -515,6 +525,7 @@ See
 LatexCommand href
 name "Jupyter notebook on Matplotlib"
 target "http://nbviewer.jupyter.org/url/www.ams.sunysb.edu/%7Ejiao/teaching/ams595/Notebooks/matplotlib-basics.ipynb"
+literal "false"
 
 \end_inset
 
@@ -527,6 +538,7 @@ target "http://nbviewer.jupyter.org/url/www.ams.sunysb.edu/%7Ejiao/teaching/ams5
 LatexCommand href
 name "this sample data"
 target "http://www.ams.sunysb.edu/%7Ejiao/teaching/ams595/Notebooks/test1.exact.128.out"
+literal "false"
 
 \end_inset
 
@@ -566,6 +578,7 @@ Text and Binary File
 LatexCommand href
 name "numpy.loadtxt()"
 target "http://docs.scipy.org/doc/numpy/reference/generated/numpy.loadtxt.html"
+literal "false"
 
 \end_inset
 
@@ -582,6 +595,7 @@ SciPy's
 LatexCommand href
 name "scipy.io"
 target "http://docs.scipy.org/doc/scipy/reference/tutorial/io.html"
+literal "false"
 
 \end_inset
 
